# plc

./: .gitignore  CMakeLists.txt  README.md
include/: asm.hpp  ast.hpp  error.hpp  grammar.hpp  keyword.hpp
output/: example-code.txt  example-log.txt
resource/: example-2.pl  example-2.pl0  example.pl  example.pl0
src/: asm.cpp  ast.cpp  grammar.cpp  keyword.cpp  main.cpp  nasm.cpp
